--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,5 @@
 @import "imports/defaults";
 
-h1 {
-    transform: translate(1.5);
-}
-
 .white-black {
     background: white;
     color: black;
@@ -34,18 +30,30 @@ h1 {
     font-size: 1.5rem;
 }
 .scroll {
-    overflow-y: scroll;
+    overflow-y: auto;
+    height: 150px;
 }
 
 form {
     width: 400px;
     padding: 10px 20px;
     border-radius: 10px;
-    margin: 20vh auto 0;
+    margin: 15vh auto 0;
 
     .divGame {
+        .headline {
+            grid-column: 1 / 3;
+            font-size: 1.6em;
+        }
+        input[type="button"] {
+            grid-column: 1 / 3;
+            justify-self: center;
+            padding: 5% 0;
+            width: 50%;
+        }
+
         &Setup {
-            display: grid;
+            // display: is set by adding/removing .grid/.hidden in JS to show or hide the element!
             grid-template-columns: 1fr 2fr;
             justify-content: center;
 
@@ -53,9 +61,8 @@ form {
                 width: auto;
                 padding: 20px;
                 grid-column: 1 / 3;
-                background: rebeccapurple;
 
-                // display: grid;
+                // display: is set by adding/removing .grid/.hidden in JS to show or hide the element!
                 grid-template-columns: 2fr 1fr;
                 justify-items: left;
                 align-items: center;
@@ -64,11 +71,25 @@ form {
                     width: 100%;
                 }
             }
+        }
 
-            input[type="button"] {
-                grid-column: 1 / 3;
-                justify-self: center;
+        &Active {
+            text-align: center;
+        }
+
+        &Play {
+            // display: is set by adding/removing .grid/.hidden in JS to show or hide the element!
+            grid-template-columns: 1fr 1fr;
+            justify-items: center;
+
+            > input {
+                padding: 10% 0;
+                width: 90%;
             }
+        }
+
+        &Hints {
+            padding: 0 20px;
         }
     }
 
@@ -81,13 +102,18 @@ form {
         @extend .black-white;
         @extend .frame;
         @extend .input;
+        transition: all 0.3s;
+    }
+    input[type="button"]:hover {
+        @extend .white-black;
     }
 
     input[type="number"] {
         @extend .white-black;
         @extend .frame;
         @extend .input;
-        outline-color: white;
+        outline: none;
+        // outline-color: white;
         text-align: right;
     }
 
@@ -100,12 +126,5 @@ form {
         p {
             font-size: 1.5rem;
         }
-    }
-    #divGameActive {
-        text-align: center;
-        font-size: 2rem;
-    }
-    #lblCustomTries {
-        display: inline;
     }
 }
