--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -139,7 +139,7 @@ p {
         grid-template-columns: 1fr 2fr;
         justify-content: center;
 
-        // comtainer for radio buttons
+        // container for radio buttons
         &Radio {
             input {
                 // the original radio buttons are to small!
